Fixing alignment issues with the text
adding a flex box instead of the gird layout and adding media queries

--- a/css/main.css
+++ b/css/main.css
@@ -30,38 +30,42 @@ body {
 }
 
 /* Start of the about section */
+  #about_title {
+    font-size: 3rem;
+    font-weight: bold;
+    color: #333;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    padding-bottom: 2rem;
+    background-color: lightblue;
+    margin-bottom: -20px;
+  }
+
 #about_container {
-  background-color: lightblue;
-}
-#about_title {
-  font-size: 3rem;
-  font-weight: bold;
-  color: #333;
-  text-align: center;
-  text-transform: uppercase;
-  letter-spacing: 0.1em;
-  margin-bottom: 2rem;
-}
-#flex_container {
-  display: flex;
-}
-#about_image {
-  border-radius: 6px;
-    margin-bottom: 20px;
-    margin-left: 5%;
-    border-color: black;
-    border-width: 2px;
-    border-style: groove;
+    background-color: lightblue;
+    display: flex;
+    gap: 20px;
+    padding: 20px;
+  }
+  
+  #about_image {
+    max-width: 400px;
+    border-radius: 6px;
+    border: 2px groove black;
     box-shadow: 0px 3px 3px black;
-}
-#about_paragraph {
-  line-height: 2;
-  font-size: 1rem;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-        "Lucida Sans", Arial, sans-serif;
-    margin-left: 5%;
-    margin-right: 5%;
-}
+    flex: 0 0 100%; /* Flex item should take full width */
+    margin-bottom: 20px;
+  }
+  
+  #about_paragraph {
+    line-height: 2;
+    font-size: 1rem;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+    text-align: left;
+    flex: 1 100%; /* Flex item should take full width */
+    margin-bottom: 20px;
+  }
 
 /* Services Section */
 
@@ -221,3 +225,10 @@ body {
     background-color: #45a049;
   }
   
+  /* Starting of the media queries */
+
+  @media only screen and (max-width: 900px) {
+    #about_container{
+        flex-wrap: wrap;
+    }
+  }
